onboarding: fixed cut off image

--- a/source/alertify.css
+++ b/source/alertify.css
@@ -92,7 +92,7 @@ button {
 }
 
 .alertify .ajs-header {
-	min-height: 49px;
+	min-height: 100px;
 	margin-bottom: 0;
 	padding: 16px 36px 35px 100px;
 	background-image: url(../media/iconFullSize.png);
